# rust-playground

./: .gitignore  Cargo.toml  GUIDE_NODEJS.md  README.md
exercises/00_intro/: README.md  intro1.rs  intro2.rs
exercises/01_variables/: README.md  variables1.rs  variables2.rs  variables3.rs  variables4.rs
exercises/02_functions/: README.md  functions1.rs  functions2.rs  functions3.rs  functions4.rs
exercises/03_primitive_types/: README.md  primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs
exercises/04_control_flow/: README.md  control_flow1.rs  control_flow2.rs  control_flow3.rs  control_flow4.rs
exercises/05_structs/: README.md  structs1.rs  structs2.rs  structs3.rs  structs4.rs
exercises/06_enums/: README.md  enums1.rs  enums2.rs  enums3.rs  enums4.rs
exercises/07_move_semantics/: README.md  move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  move_semantics4.rs
exercises/08_ownership/: README.md  ownership1.rs
exercises/09_borrowing/: README.md  borrowing1.rs  borrowing2.rs
exercises/10_strings/: README.md  strings1.rs  strings2.rs
exercises/11_vecs/: README.md  vecs1.rs
exercises/12_hashmaps/: README.md  hashmaps1.rs
exercises/13_options/: README.md  options1.rs
exercises/14_error_handling/: README.md  errors1.rs
exercises/15_generics/: README.md  generics1.rs
exercises/16_traits/: README.md  traits1.rs
exercises/17_lifetimes/: README.md  lifetimes1.rs
exercises/18_iterators/: README.md  iterators1.rs
exercises/19_closures/: README.md  closures1.rs
exercises/20_smart_pointers/: README.md  smart_pointers1.rs
exercises/21_async/: README.md  async1.rs
exercises/22_tauri_basics/: README.md  tauri_basics1.rs
exercises/23_tauri_commands/: README.md  tauri_commands1.rs
exercises/24_tauri_state/: README.md  tauri_state1.rs
solutions/00_intro/: intro1.rs  intro2.rs
solutions/01_variables/: variables1.rs  variables2.rs  variables3.rs  variables4.rs
solutions/02_functions/: functions1.rs  functions2.rs  functions3.rs  functions4.rs
solutions/03_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs
solutions/04_control_flow/: control_flow1.rs  control_flow2.rs  control_flow3.rs  control_flow4.rs
solutions/05_structs/: structs1.rs  structs2.rs  structs3.rs  structs4.rs
solutions/06_enums/: enums1.rs  enums2.rs  enums3.rs  enums4.rs
solutions/07_move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  move_semantics4.rs
solutions/08_ownership/: ownership1.rs
solutions/09_borrowing/: borrowing1.rs  borrowing2.rs
solutions/10_strings/: strings1.rs  strings2.rs
solutions/11_vecs/: vecs1.rs
solutions/12_hashmaps/: hashmaps1.rs
solutions/13_options/: options1.rs
solutions/14_error_handling/: errors1.rs
solutions/15_generics/: generics1.rs
solutions/16_traits/: traits1.rs
solutions/17_lifetimes/: lifetimes1.rs
solutions/18_iterators/: iterators1.rs
solutions/19_closures/: closures1.rs
solutions/20_smart_pointers/: smart_pointers1.rs
solutions/21_async/: async1.rs
solutions/22_tauri_basics/: tauri_basics1.rs
solutions/23_tauri_commands/: tauri_commands1.rs
solutions/24_tauri_state/: tauri_state1.rs
src/: lib.rs
